# akode

./: .gitmodules  CMakeLists.txt  ConfigureChecks.cmake  INSTALL  README  README.md  acinclude.m4  akode.lsm  config.h.cmake  config.h.in  config.h.in~  configure.in.in
akode/: CMakeLists.txt  Makefile.am  PACKAGING  akode-config.in  akode.pc.in  configure.in.in
akode/akodeplay/: CMakeLists.txt  akodeplay.cpp
akode/lib/: CMakeLists.txt  akode_export.h.cmake  auto_sink.cpp  converter.cpp  crossfader.cpp  fast_resampler.cpp  file.h  localfile.cpp  localfile.h  magic.cpp  mmapfile.cpp  mmapfile.h  player.cpp  sinkpluginhandler.cpp  volumefilter.cpp  wav_decoder.cpp
akode/plugins/: CMakeLists.txt  Makefile.am
akode/plugins/alsa_sink/: CMakeLists.txt
akode/plugins/ffmpeg_decoder/: CMakeLists.txt  ffmpeg_decoder.cpp  ffmpeg_decoder.h
akode/plugins/jack_sink/: CMakeLists.txt  jack_sink.cpp
akode/plugins/mpc_decoder/: CMakeLists.txt  mpc_decoder.cpp  mpc_decoder.h
akode/plugins/mpc_decoder/mppdec/: CMakeLists.txt  requant.h  synth_filter.cpp
akode/plugins/mpeg_decoder/: CMakeLists.txt  mpeg_decoder.cpp  mpeg_decoder.h
akode/plugins/oss_sink/: CMakeLists.txt
akode/plugins/polyp_sink/: CMakeLists.txt  Makefile.am  polyp_sink.cpp
akode/plugins/pulse_sink/: CMakeLists.txt  Makefile.am  pulse_sink.cpp  pulse_sink.h
akode/plugins/src_resampler/: CMakeLists.txt  src_resampler.cpp  src_resampler.h
akode/plugins/sun_sink/: CMakeLists.txt
akode/plugins/xiph_decoder/: CMakeLists.txt  flac113_decoder.cpp  flac_decoder.h  speex_decoder.cpp  speex_decoder.h  vorbis_decoder.cpp  vorbis_decoder.h  xiph_decoder.h
